Implemented var holder for terms and added html files

--- a/master_tab.html
+++ b/master_tab.html
@@ -14,6 +14,8 @@
 
 <body>
 
+<script src="master_tab.js" ></script>
+
 <p><font color="white"> We proceed to test the hyperlinking function: <a href="https://google.com" style="color: #a7f442; text-decoration: none;"> Test Link</a> </font></p>
 
 </body>
