--- a/master_tab.html
+++ b/master_tab.html
@@ -14,9 +14,10 @@
 
 <body>
 
+<script src="background.js"></script>
 <script src="master_tab.js" ></script>
-
-<p><font color="white"> We proceed to test the hyperlinking function: <a href="https://google.com" style="color: #a7f442; text-decoration: none;"> Test Link</a> </font></p>
+<h2>master tab</h2>
+<div id="tabs"></div>
 
 </body>
 </html>
